syntax = "proto3";

package root;

option go_package = "root/pkg/root_v1;root";

service Root {
  rpc Calculate(CalculateRequest) returns (CalculateResponse);
  rpc CalculateFractional(CalculateFractionalRequest) returns (CalculateFractionalResponse);
}

message CalculateRequest {
  string a = 1;
  uint32 rounding = 2;
}

message CalculateResponse {
  string c = 1;
}

message CalculateFractionalRequest {
  string a1 = 1;
  string a2 = 2;
  uint32 rounding = 3;
}

message CalculateFractionalResponse {
  string c1 = 1;
  string c2 = 2;
}